successful to run all sysbench test

--- a/property.ini
+++ b/property.ini
@@ -12,9 +12,12 @@ memory-block-size=1M
 memory-total-size=100G
 num-threads=1
 [fileio]
-test = fileio
+threads=20
+file-total-size=2G
+file-test-mode=seqwr
 [threads]
-test = threads
+thread-yields=100
+thread-locks=4
 [Parameter]
 ;ALL
 report-interval = 1
